syntax = "proto3";

package kratos.api;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

option go_package = "github.com/go-kratos/kratos/v2/api/kratos/api;api";
option java_multiple_files = true;
option java_package = "com.github.kratos.api";
option objc_class_prefix = "KratosAPI";


service Description {
  // ListServices list the full name of all services
  rpc ListServices (google.protobuf.Any) returns (ListServicesReply)  {
  }

  // GetServiceDesc get the full fileDescriptorSet of service
  rpc GetServiceDesc (GetServiceDescRequest) returns (GetServiceDescReply)  {
  }
}

message ListServicesReply {
  repeated string services = 1;
}

message GetServiceDescRequest {
  string name = 1;
}

message GetServiceDescReply {
  google.protobuf.FileDescriptorSet protoSet =1;
}

